--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | 3-column preview card component</title>
-
+  <link rel="stylesheet" href="./index.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,18 +15,36 @@
   </style>
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <div class="container">
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+      <div class="card">
+        <img src="images/icon-sedans.svg" alt="sedan">
+        <h1>Sedans</h1>
+        <p> Choose a sedan for its affordability and excellent 
+          fuel economy. Ideal for cruising in the city or on 
+          your next road trip.</p>
+        <button>Learn More</button>
+      </div>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+      <div class="card">
+        <img src="images/icon-suvs.svg" alt="suv">
+        <h1>SUVs</h1>
+        <p>Take an SUV for its spacious interior, power, 
+          and versatility. Perfect for your next family 
+          vacation and off-road adventures.</p>
+        <button class="btn2">Learn More</button>
+      </div>
+
+      <div class="card">
+        <img src="images/icon-luxury.svg" alt="luxury">
+        <h1>Luxury</h1>
+        <p>Cruise in the best car brands without the 
+          bloated prices. Enjoy the enhanced comfort of 
+          a luxury rental and arrive in style.</p>
+        <button class="btn3">Learn More</button>
+      </div>
+
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
